--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script src="https://kit.fontawesome.com/7d74ec3fb0.js" crossorigin="anonymous"></script>
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
